# WhimsyAudio

./: .gitignore  .project  CMakeLists.txt  README.md
cmake-modules/: FindPortAudio.cmake
testA1/: CMakeLists.txt  testA1.cpp  whimsycore.h
testA1/core/: whimsybase.cpp  whimsynote.cpp  whimsynote.h
testA1/gui/: testA1mw.cpp  testA1mw.h
testA1/portaudio_engine/: scopedPAContext.cpp  scopedPAContext.h
testA2/: CMakeLists.txt  testA2.cpp
testA2/core/: whimsybytestream.cpp  whimsyexception.cpp  whimsyvariant.cpp
testA2/export_files/: music1.json
testA2/gui/: testA1mw.cpp  testA1mw.h
testA2/portaudio_engine/: audiostream.cpp  audiostream.h  metronometest.cpp  metronometest.h  scopedPAContext.cpp  scopedPAContext.h  squarewavetest.cpp  squarewavetest.h
testA3/: CMakeLists.txt  testA3.cpp
testA3/core/: whimsybase.h  whimsybytestream.h  whimsyexception.h  whimsyvariant.h  whimsyvector.h
testA3/export_files/: nes_2a03.json  test.json
testA3/gui/: testA3mw.cpp  testA3mw.h
testA3/portaudio_engine/: audiostream.cpp  audiostream.h  scopedPAContext.cpp  scopedPAContext.h  squarewavetest.h
